crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__classes-10.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"class Foo { constructor(x) {} }\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 31,
                    },
                },
                span: 0..31,
                kind: ClassDecl(
                    ClassDecl {
                        ident: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 6,
                                },
                                end: Position {
                                    line: 0,
                                    column: 9,
                                },
                            },
                            span: 6..9,
                            name: "Foo",
                        },
                        class: Class {
                            ident: Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 6..9,
                                name: "Foo",
                            },
                            body: [
                                Constructor(
                                    Constructor {
                                        params: [
                                            EFnParam {
                                                pat: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 24,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 25,
                                                        },
                                                    },
                                                    span: 24..25,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "x",
                                                            mutable: false,
                                                            span: 24..25,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 24,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 25,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                type_ann: None,
                                                optional: false,
                                            },
                                        ],
                                        body: Block {
                                            span: 27..29,
                                            stmts: [],
                                        },
                                    },
                                ),
                            ],
                            type_params: None,
                        },
                    },
                ),
            },
        ],
    },
)
